# linkfy

./: .replit  app.py  extensions.py  helper.py  migrate.py  models.py  pyproject.toml
blueprints/: api.py  auth.py  main.py
migrations/: env.py
migrations/versions/: 241553e4489e_.py  7cad51269921_.py  d1126b145798_.py
static/: index.js  style.css
templates/: api_docs.html  base.html  index.html
